Fix dark mode colors

--- a/components/common/RawLogs/RawLogs.module.scss
+++ b/components/common/RawLogs/RawLogs.module.scss
@@ -24,7 +24,7 @@
     tbody {
         tr {
             &:nth-child(even) {
-                background-color: #fafafa;
+                background-color: var(--color-off-white);
             }
         }
     }
